minecraft/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
      version: v1
  template:
    metadata:
      labels:
        app: minecraft
        version: v1
    spec:
      serviceAccountName: minecraft
      containers:
      - image: itzg/minecraft-server
        name: minecraft
        ports:
        - containerPort: 25565
        volumeMounts:
        - mountPath: "/data"
          name: world
      volumes:
      - name: world
        persistentVolumeClaim:
          claimName: minecraft-pvc
