minecraft/services.yml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  labels:
    app: minecraft
    service: minecraft
spec:
  ports:
  - name: minecraft
    protocol: TCP
    port: 25565
    targetPort: 25565
  selector:
    app: minecraft
